--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -43,6 +43,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Crc32Calculator.cs" />
+    <Compile Include="FdsFile.cs" />
+    <Compile Include="IFdsBlock.cs" />
+    <Compile Include="FdsDiskInfoBlock.cs" />
+    <Compile Include="FdsFileAmountBlock.cs" />
+    <Compile Include="FdsFileDataBlock.cs" />
+    <Compile Include="FdsFileHeaderBlock.cs" />
     <Compile Include="NesFile.cs" />
     <Compile Include="NesHeaderFixer.cs" />
     <Compile Include="UnifFile.cs" />
