--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -6,4 +6,9 @@
     <RootNamespace>com.clusterrr.Famicom.Containers</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DebugType>none</DebugType>
+    <DebugSymbols>false</DebugSymbols>
+  </PropertyGroup>
+
 </Project>
