--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -11,4 +11,8 @@
     <DebugSymbols>false</DebugSymbols>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DebugType>embedded</DebugType>
+  </PropertyGroup>
+
 </Project>
