--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -18,4 +18,11 @@
     <DocumentationFile>NesContainers.xml</DocumentationFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
+
+  <ItemGroup>
+    <None Update="README.md">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
+  </ItemGroup>
 </Project>
