--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,11 +12,10 @@ on:
 
 jobs:
   build:
-    environment:
-      APP_NAME: nes-containers
-      PROJECT_PATH: ./nes-containers
-      OUTPUT_DIR: output
     runs-on: ubuntu-latest
+    env:
+      APP_NAME: nes-containers
+      OUTPUT_DIR: output
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -25,7 +24,7 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Build
-        run: dotnet pack ${{ env.OUTPUT_DIR }}
+        run: dotnet pack -o ${{ env.OUTPUT_DIR }}
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
