--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -22,10 +22,10 @@ concurrency:
 jobs:
   # Single deploy job since we're just deploying
   deploy:
-    environment:
+    runs-on: ubuntu-latest
+    env:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
