--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -23,7 +23,7 @@ jobs:
   # Single deploy job since we're just deploying
   deployment:
     runs-on: ubuntu-latest
-    env:
+    enviroment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
     steps:
