--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -21,11 +21,11 @@ concurrency:
 
 jobs:
   # Single deploy job since we're just deploying
-  deployment:
-    runs-on: ubuntu-latest
-    enviroment:
+  deploy:
+    environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
