--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: ["master"]
   pull_request:
-    branches: [ master ]
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -16,6 +16,7 @@ jobs:
     env:
       APP_NAME: nes-containers
       OUTPUT_DIR: output
+      CONFIGURATION: Release
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -24,7 +25,9 @@ jobs:
         with:
           dotnet-version: 6.0.x
       - name: Build
-        run: dotnet pack -o ${{ env.OUTPUT_DIR }}
+        run: dotnet build -c ${{ env.CONFIGURATION }}
+      - name: Pack
+        run: dotnet pack -c ${{ env.CONFIGURATION }} -o ${{ env.OUTPUT_DIR }}
       - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
