--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -5,18 +5,16 @@
     <AssemblyName>NesContainers</AssemblyName>
     <RootNamespace>com.clusterrr.Famicom.Containers</RootNamespace>
     <LangVersion>7.3</LangVersion>
+    <DebugType>embedded</DebugType>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
+    <DocumentationFile>NesContainers.xml</DocumentationFile>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DebugType>none</DebugType>
     <DebugSymbols>false</DebugSymbols>
-  </PropertyGroup>
-
-  <PropertyGroup>
-    <DebugType>embedded</DebugType>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
-    <DocumentationFile>NesContainers.xml</DocumentationFile>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
 
   <ItemGroup>
