--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -11,6 +11,17 @@
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <Nullable>enable</Nullable>
+    <Title>NesContainers</Title>
+    <Company>Cluster</Company>
+    <PackageProjectUrl>https://github.com/ClusterM/nes-containers</PackageProjectUrl>
+    <Copyright>Alexey 'Cluster' Avdyukhin, 2022</Copyright>
+    <Description>A simple .NET Standard 2.0 library for reading and modifying NES/Famicom ROM containers: .nes (iNES, NES 2.0), .unf (UNIF), and .fds (Famicom Disk System images).</Description>
+    <Version>1.0.0</Version>
+    <RepositoryUrl>https://github.com/ClusterM/nes-containers</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PackageTags>nes,famicom,famicom disk system</PackageTags>
+    <AssemblyVersion>1.0.0</AssemblyVersion>
+    <FileVersion>1.0.0</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
