--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -22,6 +22,7 @@
     <PackageTags>nes,famicom,famicom disk system</PackageTags>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <FileVersion>1.0.0</FileVersion>
+    <Authors>Alexey 'Cluster' Avdyukhin</Authors>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
