--- a/NesContainers.csproj
+++ b/NesContainers.csproj
@@ -14,12 +14,12 @@
     <Title>NesContainers</Title>
     <Company>Cluster</Company>
     <PackageProjectUrl>https://github.com/ClusterM/nes-containers</PackageProjectUrl>
-    <Copyright>Alexey 'Cluster' Avdyukhin, 2022</Copyright>
+    <Copyright>Alexey 'Cluster' Avdyukhin, 2023</Copyright>
     <Description>A simple .NET Standard 2.0 library for reading and modifying NES/Famicom ROM containers: .nes (iNES, NES 2.0), .unf (UNIF), and .fds (Famicom Disk System images).</Description>
     <Version>1.1.4</Version>
     <RepositoryUrl>https://github.com/ClusterM/nes-containers</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
-    <PackageTags>nes,famicom,famicom disk system</PackageTags>
+    <PackageTags>nes;famicom;famicom disk system</PackageTags>
     <AssemblyVersion>1.1.4</AssemblyVersion>
     <FileVersion>1.1.4</FileVersion>
     <Authors>Alexey 'Cluster' Avdyukhin</Authors>
